# zeldhash-api

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  apiary.apib  rust-toolchain.toml
src/: cli.rs  config.rs  defaults.rs  main.rs  rollblockpool.rs  routes.rs  sqlitepool.rs
