[package]
name = "mhinapi"
version = "0.1.0"
edition = "2021"
description = "REST API exposing My Hash Is Nice database over HTTP"
authors = ["mhin contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ouziel-slama/mhinapi"
homepage = "https://github.com/ouziel-slama/mhinapi"
readme = "README.md"
keywords = ["bitcoin", "api", "sqlite", "axum", "rest"]
categories = ["web-programming::http-server", "database"]
rust-version = "1.81"

[dependencies]
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
directories = "6.0"
rollblock = "0.3.4"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bitcoin = "0.32"
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh64"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
