[package]
name = "zeldhash-api"
version = "0.3.0"
edition = "2021"
description = "REST API exposing ZeldHash database over HTTP"
authors = ["Ouziel Slama"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ouziel-slama/zeldhash-api"
homepage = "https://zeldhash.com"
readme = "README.md"
keywords = ["bitcoin", "api", "sqlite", "axum", "rest"]
categories = ["web-programming::http-server", "database"]
rust-version = "1.81"

[dependencies]
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
directories = "6.0"
tower-http = { version = "0.5", features = ["cors"] }
rollblock = {version = "0.4.1", features = ["key-12"]}
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bitcoin = "0.32"
zeldhash-protocol = "0.5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
